--- a/angular.json
+++ b/angular.json
@@ -121,6 +121,41 @@
           }
         }
       }
+    },
+    "@anyres/ng-anyres": {
+      "root": "projects/anyres/ng-anyres",
+      "sourceRoot": "projects/anyres/ng-anyres/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/anyres/ng-anyres/tsconfig.lib.json",
+            "project": "projects/anyres/ng-anyres/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/anyres/ng-anyres/src/test.ts",
+            "tsConfig": "projects/anyres/ng-anyres/tsconfig.spec.json",
+            "karmaConfig": "projects/anyres/ng-anyres/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/anyres/ng-anyres/tsconfig.lib.json",
+              "projects/anyres/ng-anyres/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "ng-anyres-lib"
