--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,14 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@anyres/ng-anyres": [
+        "dist/anyres/ng-anyres"
+      ],
+      "@anyres/ng-anyres/*": [
+        "dist/anyres/ng-anyres/*"
+      ]
+    }
   }
 }
