--- a/projects/anyres/ng-anyres/package.json
+++ b/projects/anyres/ng-anyres/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@anyres/ng-anyres",
-  "version": "0.2.5",
+  "version": "0.2.8-rc0",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
-    "@anyres/core": "^0.2.5",
+    "@angular/common": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@anyres/core": "^0.2.8",
     "rxjs": "^6.0.0"
   }
 }
