--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "db":"json-server db.json",
+    "test": "ng test @anyres/ng-anyres",
+    "build": "ng build @anyres/ng-anyres"
   },
   "private": true,
   "dependencies": {
@@ -20,8 +21,8 @@
     "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "^7.1.4",
     "@angular/router": "^7.1.4",
-    "@anyres/core": "^0.2.8",
-    "@anyres/ng-mock-restful": "^0.2.5",
+    "@anyres/core": "^0.3.0",
+    "@anyres/ng-mock-restful": "^0.3.0-rc1",
     "@delon/mock": "^1.4.5",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
@@ -39,6 +40,7 @@
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "json-server": "^0.14.2",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
